chore: prop xroad.proxy-ui-api.automatic-activate-auth-certificate
Refs: XRDDEV-2974