@@ -26,17 +26,16 @@
  */
 package org.niis.xroad.securityserver.restapi.scheduling;
 
-import ee.ria.xroad.common.SystemProperties;
 import ee.ria.xroad.common.identifier.ClientId;
 import ee.ria.xroad.common.identifier.SecurityServerId;
 
 import lombok.extern.slf4j.Slf4j;
-import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.niis.xroad.globalconf.model.MemberInfo;
 import org.niis.xroad.globalconf.model.SharedParameters;
 import org.niis.xroad.securityserver.restapi.config.AbstractFacadeMockingTestContext;
+import org.niis.xroad.securityserver.restapi.config.AdminServiceProperties;
 import org.niis.xroad.securityserver.restapi.service.ClientService;
 import org.niis.xroad.securityserver.restapi.service.GlobalConfService;
 import org.niis.xroad.securityserver.restapi.service.ServerConfService;
@@ -97,6 +96,8 @@ public class GlobalConfCheckerTest extends AbstractFacadeMockingTestContext {
     private GlobalConfService globalConfService;
     @MockitoBean
     private MailNotificationHelper mailNotificationHelper;
+    @MockitoBean
+    private AdminServiceProperties adminServiceProperties;
 
     private static final ClientId.Conf OWNER_MEMBER =
             TestUtils.getClientId("FI", "GOV", "M1", null);
@@ -176,11 +177,6 @@ public class GlobalConfCheckerTest extends AbstractFacadeMockingTestContext {
         when(signerRpcClient.getTokens()).thenReturn(new ArrayList<>(tokens.values()));
         when(signerRpcClient.getAuthKey(any())).thenReturn(new AuthKeyInfo(
                 KEY_AUTH_ID, null, certificateInfo));
-    }
-
-    @After
-    public void tearDown() throws Exception {
-        System.clearProperty(SystemProperties.PROXY_UI_API_AUTOMATIC_ACTIVATE_AUTH_CERTIFICATE);
     }
 
     @Test
@@ -310,7 +306,7 @@ public class GlobalConfCheckerTest extends AbstractFacadeMockingTestContext {
         tokens.put(tokenInfo.getId(), tokenInfo);
         when(signerRpcClient.getTokens()).thenReturn(new ArrayList<>(tokens.values()));
 
-        System.setProperty(SystemProperties.PROXY_UI_API_AUTOMATIC_ACTIVATE_AUTH_CERTIFICATE, "true");
+        when(adminServiceProperties.isAutomaticActivateAuthCertificate()).thenReturn(true);
         globalConfChecker.checkGlobalConf();
 
         verify(signerRpcClient).setCertStatus(any(), any());
@@ -330,8 +326,8 @@ public class GlobalConfCheckerTest extends AbstractFacadeMockingTestContext {
         globalConfChecker.updateTimestampServiceUrls(approvedTSATypes, timestampingServices);
         assertEquals(1, approvedTSATypes.size());
         assertEquals(1, timestampingServices.size());
-        assertEquals(approvedTSATypes.get(0).getName(), timestampingServices.get(0).getName());
-        assertEquals(approvedTSATypes.get(0).getUrl(), timestampingServices.get(0).getUrl());
+        assertEquals(approvedTSATypes.getFirst().getName(), timestampingServices.getFirst().getName());
+        assertEquals(approvedTSATypes.getFirst().getUrl(), timestampingServices.getFirst().getUrl());
 
         // test the normal update case
         // the change in approvedTSAType1 URL should be reflected to tspType1 URL
@@ -346,8 +342,8 @@ public class GlobalConfCheckerTest extends AbstractFacadeMockingTestContext {
         globalConfChecker.updateTimestampServiceUrls(approvedTSATypes1, tspTypes1);
         assertEquals(2, approvedTSATypes1.size());
         assertEquals(2, tspTypes1.size());
-        assertEquals(approvedTSATypes1.get(0).getName(), tspTypes1.get(0).getName());
-        assertEquals(approvedTSATypes1.get(0).getUrl(), tspTypes1.get(0).getUrl());
+        assertEquals(approvedTSATypes1.getFirst().getName(), tspTypes1.getFirst().getName());
+        assertEquals(approvedTSATypes1.getFirst().getUrl(), tspTypes1.getFirst().getUrl());
         assertEquals(approvedTSATypes1.get(1).getName(), tspTypes1.get(1).getName());
         assertEquals(approvedTSATypes1.get(1).getUrl(), tspTypes1.get(1).getUrl());
 
@@ -366,8 +362,8 @@ public class GlobalConfCheckerTest extends AbstractFacadeMockingTestContext {
         globalConfChecker.updateTimestampServiceUrls(approvedTSATypes2, tspTypes2);
         assertEquals(3, approvedTSATypes2.size());
         assertEquals(3, tspTypes2.size());
-        assertEquals(approvedTSATypes2.get(0).getName(), tspTypes2.get(0).getName());
-        assertNotEquals(approvedTSATypes2.get(0).getUrl(), tspTypes2.get(0).getUrl());
+        assertEquals(approvedTSATypes2.getFirst().getName(), tspTypes2.getFirst().getName());
+        assertNotEquals(approvedTSATypes2.getFirst().getUrl(), tspTypes2.getFirst().getUrl());
         assertEquals(approvedTSATypes2.get(1).getName(), tspTypes2.get(1).getName());
         assertEquals(approvedTSATypes2.get(1).getUrl(), tspTypes2.get(1).getUrl());
         assertEquals(approvedTSATypes2.get(2).getName(), tspTypes2.get(2).getName());
